# Computer_Sciences_For_Fun

CSE251/: Dockerfile  Makefile
CSE251/src/: rlc.c  step2.c
CSE251/src/chap11/: wumpus1.c  wumpus2.c
CSE251/src/chap12/: Makefile  display.c  hanoi.c  hanoi.h  prog.h
CSE251/src/chap13/: Makefile  io.c  transistors.c  transistors.h
CSE251/src/chap3/: rlc2.c
CSE251/src/chap4/: sine.c
CSE251/src/chap5/: fib.c  moon.c
CSE251/src/chap6/: cards.c  combi.c  combi1.c  war.c
CSE251/src/chap7/: pointers.c  quadratic.c
CSE251/src/chap8/: array.c  words.c
CSE251/src/chap9/: reverse.c  stringer.c
cs106B/HW0_NameHash/: CMakeLists.txt
cs106B/HW1_Life/: .gitignore  CMakeLists.txt
cs106B/HW1_Life/src/: life.cpp
cs106B/HW2/Ngrams/: CMakeLists.txt
cs106B/HW2/WordLadder/: CMakeLists.txt
cs106B/HW2/WordLadder/src/: wordladder.cpp
cs106B/HW3/Fractals/: CMakeLists.txt
cs106B/HW3/Fractals/lib/StanfordCPPLib/include/: filelib.cpp
cs106B/HW3/Fractals/src/: fractalgui.cpp  fractalgui.h  fractals.cpp  fractals.h
cs106B/HW3/GrammarSolver/: .gitignore  CMakeLists.txt
cs106B/HW3/GrammarSolver/lib/StanfordCPPLib/private/: platform.cpp  platform.h
cs106B/HW3/GrammarSolver/src/: grammarmain.cpp  grammarsolver.cpp  grammarsolver.h
cs106B/HW4/Boggle/: CMakeLists.txt
cs106B/HW5/Patient Queue/: CMakeLists.txt
cs106B/HW5/Patient Queue/lib/StanfordCPPLib/private/: platform.cpp  platform.h
cs106B/HW5/Patient Queue/src/: HeapPatientQueue.cpp  HeapPatientQueue.h  LinkedListPatientQueue.cpp  VectorPatientQueue.cpp  VectorPatientQueue.h  hospital.cpp
cs106B/HW6/: CMakeLists.txt
cs106B/HW6/lib/StanfordCPPLib/: exceptions.cpp
cs106B/HW6/src/: encoding.cpp  encoding.h  mymap.cpp  mymap.h
cs106B/HW7/: README.md  Trailblazer.cpp
cs106B/assignment/: 1.html  2.html  3A.html  3B.html  4.html  5.html  6.html
cs106L/: README.md
cs106L/L1-intro/: Makefile
cs106L/L11-const/median-o(n)/: median.h
cs106L/L4-streams/: Makefile  input.txt  inputStreams.cpp  outputStreams.cpp  streamBuffer.cpp
cs106L/L5-containers/: Makefile  VecDeqSpeed.cpp
cs106L/L9-summary/: Makefile  chal2.cpp  chal4.cpp  chal5.cpp  chal6.cpp  main.cpp
cs61a/disc/: 02.py  03.py  04.py  05.py  06.py  07.py  08.py  10.scm  11.py  12.sql
cs61a/hw01/: README.md  hw01.py
cs61c/lab02/: bit_ops.c  vector.c
cs61c/lab03/: factorial.c  factorial.s  list_map.s
cs61c/lab04/: cc_test.s  megalistmanips.s
cs61c/lab05/: ex2.circ  ex3.circ  ex4.circ
cs61c/lab06/: ex1.circ  ex2.circ  ex3.txt  ex4.circ
cs61c/lab07/: ans.md
cs61c/lab08/: simd.c
cs61c/lab09/: omp_apps.c
cs61c/lab10/: answer.txt
cs61c/sp22-proj1-starter/: state.c  state.h
cs61c/sp22-proj2-starter/: README.md  studenttests.py
cs61c/sp22-proj4-starter/: Makefile
cs61c/tools/: Dockerfile  installCgdb.sh
csapp/archlab/: Dockerfile  README.md
csapp/attack_lab/: Makefile  README.txt  ctarget.l1.txt  ctarget.l2.txt  ctarget.l2err.txt  ctarget.l3.txt  ctarget.l5.txt  solution1.md  solution2.md  solution2.s  solution2err.d  solution2err.s  solution3.d  solution3.md  solution3.s  solution4.md  solution5.md  str2  str3  str5  str5err  strerr2  subrsp.d  subrsp.s
csapp/bomb_lab/: Dockerfile  Makefile  README  bomb.s  installCgdb.sh
csapp/cachelab/: hitf0
csapp/chap02/: Dockerfile  bits.c
csapp/data_lab/: Makefile
csapp/malloc_lab/: Makefile
csapp/proxy_lab/: 12_19.c  12_22.c  Dockerfile
english_learning/: note.md
english_learning/verbs/: a.md  note.md
eopl3/: README.md
eopl3/ch1/: 12.scm  16.scm  18.scm  20.scm  21.scm  22.scm  23.scm  24.scm  25.scm  26.scm  27.scm  28.scm  29.scm  30.scm  31.scm  32.scm  33.scm  34.scm  35.scm  36.scm
eopl3/ch2/: 01.scm  04.scm  05.scm  06.scm  07.scm  08.scm  09.scm  10.scm  11.scm  12.scm  13.scm  14.scm  15.scm  16.scm  18.scm  19.scm  21.scm  22.scm  23.scm  24.scm  25.scm  26.scm  28.scm  29.scm  30.scm  31.scm
eopl3/libs/: init.scm
rust_atomics_and_locks/: note.md
rust_atomics_and_locks/examples/: ch1-01-hello.rs  ch1-02-hello-join.rs  ch1-03-spawn-closure.rs  ch1-04-scoped-threads.rs  ch1-05-rc.rs  ch1-06-cell.rs  ch1-07-refcell.rs  ch1-08-mutex.rs  ch1-09-sleep-before-unlock.rs  ch1-11-thread-parking.rs  ch1-12-condvar.rs  ch2-01-stop-flag.rs  ch2-02-progress-reporting.rs  ch2-03-progress-reporting-unpark.rs  ch2-04-lazy-init.rs  ch2-05-fetch-add.rs  ch2-06-progress-reporting-multiple-threads.rs  ch2-07-statistics.rs  ch2-08-id-allocation.rs  ch2-09-id-allocation-panic.rs  ch2-10-id-allocation-subtract-before-panic.rs  ch2-11-increment-with-compare-exchange.rs  ch2-12-id-allocation-without-overflow.rs  ch2-13-lazy-one-time-init.rs  ch3-01-relaxed.rs  ch3-02-spawn-join.rs  ch3-03-total-modification-order.rs  ch3-04-total-modification-order-2.rs  ch3-06-release-acquire.rs  ch3-07-release-acquire-unsafe.rs  ch3-08-lock.rs  ch3-09-lazy-init-box.rs  ch3-10-seqcst.rs  ch3-11-fence.rs
rust_atomics_and_locks/src/: lib.rs
(+254 files in other folders)
